[gd_scene load_steps=15 format=2]

[ext_resource path="res://interface/menus/EquipmentMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://interface/theme/fonts/num_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://interface/theme/fonts/roll_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://interface/PlayerMenu.gd" type="Script" id=4]
[ext_resource path="res://interface/PlayerMenu/player_menu_buttons.tres" type="ButtonGroup" id=5]
[ext_resource path="res://interface/SaveSystem/SaveFileMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/TabController.gd" type="Script" id=7]
[ext_resource path="res://interface/MenuContainer.gd" type="Script" id=8]
[ext_resource path="res://interface/menus/InventoryMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://interface/UI/PlayerInfoPanel.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod: hint_range(0, 5);

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb - vec3(.5, .5, .5);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 4.0

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
Button/colors/font_color_hover = Color( 0.2847, 0.479519, 0.73, 1 )
Button/colors/font_color_pressed = Color( 0.101961, 0.168627, 0.258824, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="StyleBoxEmpty" id=4]

[node name="PlayerMenu" type="ColorRect"]
pause_mode = 2
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabController" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderTabs" type="HBoxContainer" parent="MarginContainer/TabController"]
margin_right = 1856.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = SubResource( 3 )
alignment = 1

[node name="Left" type="Button" parent="MarginContainer/TabController/HeaderTabs"]
margin_left = 194.0
margin_right = 422.0
margin_bottom = 100.0
focus_neighbour_right = NodePath("../Right")
focus_neighbour_bottom = NodePath("../../EquipmentMenu")
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "Inventory"
flat = true

[node name="Current" type="Button" parent="MarginContainer/TabController/HeaderTabs"]
margin_left = 765.0
margin_right = 1090.0
margin_bottom = 100.0
focus_mode = 0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
group = ExtResource( 5 )
text = "Equipment"
flat = true

[node name="Right" type="Button" parent="MarginContainer/TabController/HeaderTabs"]
margin_left = 1470.0
margin_right = 1626.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../Left")
focus_neighbour_bottom = NodePath("../../EquipmentMenu")
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "System"
flat = true

[node name="MenuContainer" type="PanelContainer" parent="MarginContainer/TabController"]
margin_top = 104.0
margin_right = 1856.0
margin_bottom = 1016.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
script = ExtResource( 8 )

[node name="EquipmentMenu" parent="MarginContainer/TabController/MenuContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1856.0
margin_bottom = 912.0
size_flags_vertical = 3

[node name="SaveFileMenu" parent="MarginContainer/TabController/MenuContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1856.0
margin_bottom = 912.0
size_flags_vertical = 3

[node name="InventoryMenu" parent="MarginContainer/TabController/MenuContainer" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1856.0
margin_bottom = 912.0

[node name="PlayerInfoPanel" parent="MarginContainer/TabController/MenuContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1856.0
margin_bottom = 912.0
[connection signal="pressed" from="MarginContainer/TabController/HeaderTabs/Left" to="MarginContainer/TabController" method="_on_Left_pressed"]
[connection signal="pressed" from="MarginContainer/TabController/HeaderTabs/Right" to="MarginContainer/TabController" method="_on_Right_pressed"]
